# trident

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Fuzzing.md  Makefile  README.md  SECURITY.md  index.html  purge_cache.sh  trident-spec.json  versions.json
0.10.0/: 404.html  (+2 more)
crates/cli/: Cargo.toml
crates/cli/src/: command.rs  howto.md  lib.rs
crates/cli/src/command/: build.rs  clean.rs  compare_regression.rs  explorer.rs  fuzz.rs  howto.rs  init.rs  keypair.rs  localnet.rs  mod.rs  server.rs  test.rs
crates/client/: Cargo.toml  build.rs  config.json
crates/client/derive/display_ix/: Cargo.toml
crates/client/derive/fuzz_deserialize/: Cargo.toml
crates/client/derive/fuzz_test_executor/: Cargo.toml
crates/client/src/: anchor_idl.rs  cleaner.rs  client.rs  commander.rs  config.rs  error.rs  error_reporter.rs  fuzzer.rs  fuzzer_generator.rs  idl.rs  idl_loader.rs  keys.rs  lib.rs  program_client_generator.rs  reader.rs  server.rs  temp_clone.rs  test_generator.rs  test_generator_gitignore.rs  test_generator_manifest.rs  test_generator_template.rs  tester.rs  utils.rs  versions_config.rs  workspace_builder.rs
crates/client/src/commander/: afl.rs  fuzz.rs  honggfuzz.rs  mod.rs
crates/client/src/config/: afl.rs  fuzz.rs  honggfuzz.rs  mod.rs
crates/client/src/coverage/: afl.rs  constants.rs  coverage_format.rs  honggfuzz.rs  mod.rs  tests.rs
crates/client/src/fuzzer/: accounts_storage.rs  data_builder.rs  error.rs  fuzzer_generator.rs  fuzzing_stats.rs  mod.rs  program_test_client_blocking.rs  snapshot.rs  snapshot_generator.rs
crates/client/src/generators/: fuzzer_generator.rs  mod.rs  program_client_generator.rs  snapshot_generator.rs  test_generator.rs
crates/client/src/server/: dashboard_list_template.html
crates/client/src/source_code_generators/: custom_types.rs  fuzz_accounts.rs  fuzz_instructions_generator.rs  fuzzer_generator.rs  instruction_inputs.rs  instruction_ixops.rs  instruction_variants.rs  mod.rs  program_client_generator.rs  snapshot_generator.rs  test_fuzz_generator.rs
crates/client/src/template/: Cargo_fuzz.toml.tmpl  Trident.toml.tmpl
crates/client/src/templates/: Trdelnik.toml.tmpl  Trident.toml.tmpl
crates/client/tests/: test.rs  test_config.rs  test_fuzz.rs  test_fuzz_parse_options.rs  test_program_client.rs
crates/client/tests/anchor_idl/: additional_program.json  dummy_2.json  dummy_example.json  example.json  idl_test.json
crates/client/tests/expected_source_codes/: expected_fuzz_instructions.rs  expected_program_client_code.rs  expected_test_fuzz.rs
crates/client/tests/fuzz_template/: fuzz_accounts.rs  fuzz_transactions.rs  test_fuzz.rs  types.rs
crates/client/tests/test_data/: expanded_anchor_program.rs  expected_accounts_snapshots.rs  expected_client_code.rs
crates/config/: Cargo.toml
crates/config/src/: afl.rs  argument.rs  constants.rs  coverage.rs  fork.rs  fuzz.rs  honggfuzz.rs  lib.rs  metrics.rs  regression.rs  utils.rs
crates/config/src/rpc_client/: fork.rs  mod.rs
crates/config/template/: Trident.toml.tmpl
crates/explorer/: Cargo.toml
crates/explorer/src/: account.rs  config.rs  display.rs  error.rs  lib.rs  output.rs  parse.rs  program.rs  transaction.rs
crates/explorer/src/parse/: associated_token_account.rs  bpf_loader.rs  bpf_upgradeable_loader.rs  memo.rs  stake.rs  system.rs  system_program.rs  token.rs  vote.rs
crates/fork/: Cargo.toml
crates/fork/src/: lib.rs
crates/fuzz/: Cargo.toml
crates/fuzz/attr/instr_data/: Cargo.toml
crates/fuzz/src/: accounts_storage.rs  address_storage.rs  data_builder.rs  error.rs  fuzz_client.rs  fuzz_client_impl.rs  fuzz_data.rs  fuzz_deserialize.rs  fuzz_stats.rs  fuzz_test_executor.rs  fuzz_trident.rs  fuzzing_stats.rs  instructions_sequence.rs  ix_ops.rs  lib.rs  metrics.rs  program_test_client_blocking.rs  snapshot.rs  transaction_executor.rs  trident.rs  trident_accounts.rs  trident_accounts_struct.rs  trident_pubkey.rs  trident_rng.rs  trident_seed.rs  types.rs
crates/fuzz/stubsv2/: Cargo.toml
crates/metrics/: Cargo.toml
crates/metrics/src/: custom_metrics.rs  dashboard.rs  lib.rs  state_monitoring.rs  transaction_custom_error.rs  transaction_error.rs  transaction_invariants.rs  transaction_panics.rs  types.rs
crates/syn/: Cargo.toml
crates/syn/src/: lib.rs
crates/template/: Cargo.toml
crates/template/src/: custom_types.rs  error.rs  fuzz_accounts.rs  fuzz_instructions_generator.rs  get_accounts.rs  get_data.rs  get_ix_discriminator.rs  get_program_id.rs  idl_type_to_syn_type.rs  instruction_account.rs  instruction_inputs.rs  instruction_ixops.rs  instruction_variants.rs  lib.rs  template.rs  template_custom_types.rs  template_fuzz_transactions.rs  template_getters.rs  template_instruction.rs  template_transaction.rs  test_fuzz.rs  test_fuzz_generator.rs
crates/template/templates/: Cargo_fuzz.toml.tera  Trident.toml.tera  fuzz_accounts.rs.tera  instruction.rs.tera  test_fuzz.rs.tera  transaction.rs.tera  types.rs.tera
crates/test/: Cargo.toml
crates/test/src/: client.rs  lib.rs  reader.rs  temp_clone.rs
crates/trdelnik/: Cargo.toml
crates/trdelnik/src/: client.rs  commander.rs  idl.rs  keys.rs  lib.rs  program_client_generator.rs  reader.rs  temp_clone.rs  tester.rs
crates/trdelnik/tests/: test.rs
crates/trdelnik_cli/: Cargo.toml
crates/trdelnik_cli/src/: command.rs  config.rs  lib.rs  main.rs
crates/trdelnik_client/: Cargo.toml
crates/trdelnik_client/src/: lib.rs
crates/trdelnik_program_macros/: Cargo.toml
crates/trdelnik_program_macros/src/: lib.rs
examples/cpi/simple-cpi-6/: Anchor.toml  Cargo.toml
examples/escrow/trdelnik-tests/: Cargo.toml
examples/fuzz_example2/trdelnik-tests/: Cargo.toml
examples/fuzz_example3/trdelnik-tests/: Cargo.toml
examples/fuzzer/trdelnik-tests/: Cargo.toml
examples/hello_world/trident-tests/: Cargo.toml  Trident.toml
examples/state_machine/client/: Cargo.toml  coin.js  getState.js  init.js  push.js
examples/state_machine/program_client/: Cargo.toml
examples/token-2022/trident-tests/: Cargo.toml
examples/turnstile/trdelnik-tests/: Cargo.toml
(+1643 files in other folders)
