[workspace]
members = [
    "crates/cli",
    "crates/client",
    "crates/config",
    "crates/fuzz",
    "crates/syn",
    "crates/template",
    "crates/metrics",
]
exclude = ["examples/"]
resolver = "1"


[workspace.package]
version = "0.11.1"
edition = "2021"
authors = ["Ackee Blockchain Security"]
repository = "https://github.com/Ackee-Blockchain/trident"
documentation = "https://ackee.xyz/trident/docs/latest/"
description = "Trident is Rust based fuzzing framework for Solana programs written in Anchor."
license-file = "./LICENSE"
readme = "./README.md"

[workspace.dependencies]
# Internal Trident crates
trident-cli = { path = "crates/cli", version = "0.11.1" }
trident-client = { path = "crates/client", version = "0.11.1" }
trident-config = { path = "crates/config", version = "0.11.1" }
trident-fuzz = { path = "crates/fuzz", version = "0.11.1" }
trident-syn = { path = "crates/syn", version = "0.11.1" }
trident-template = { path = "crates/template", version = "0.11.1" }
trident-fuzz-metrics = { path = "crates/metrics", version = "0.11.1" }

# Derive macros
trident-derive-flow-executor = { path = "crates/fuzz/derive/flow_executor", version = "0.11.0" }
trident-derive-fuzz-test-methods = { path = "crates/fuzz/derive/fuzz_test_methods", version = "0.11.0" }

# External dependencies
solana-sdk = "~2.0"
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
