[workspace]
members = [
    "crates/cli",
    "crates/client",
    "crates/config",
    "crates/fuzz",
    "crates/syn",
    "crates/template",
    "crates/metrics",
]
exclude = ["examples/"]
resolver = "1"


[workspace.package]
version = "0.12.0-rc.3"
edition = "2021"
authors = ["Ackee Blockchain Security"]
repository = "https://github.com/Ackee-Blockchain/trident"
documentation = "https://ackee.xyz/trident/docs/latest/"
description = "Trident is Rust based fuzzing framework for Solana programs written in Anchor."
license-file = "./LICENSE"
readme = "./README.md"

[workspace.dependencies]
# Internal Trident crates
trident-cli = { path = "crates/cli", version = "0.12.0-rc.3" }
trident-client = { path = "crates/client", version = "0.12.0-rc.3" }
trident-config = { path = "crates/config", version = "0.12.0-rc.3" }
trident-fuzz = { path = "crates/fuzz", version = "0.12.0-rc.3" }
trident-syn = { path = "crates/syn", version = "0.12.0-rc.3" }
trident-template = { path = "crates/template", version = "0.12.0-rc.3" }
trident-fuzz-metrics = { path = "crates/metrics", version = "0.12.0-rc.3" }

# Derive macros
trident-derive-flow-executor = { path = "crates/fuzz/derive/flow_executor", version = "0.12.0-rc.3" }
trident-derive-fuzz-test-methods = { path = "crates/fuzz/derive/fuzz_test_methods", version = "0.12.0-rc.3" }

# External dependencies
solana-sdk = "2.3"
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
