[package]
name = "trident-cli"

version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }


[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
fehler = { workspace = true }
termimad = { workspace = true }
heck = { workspace = true }

trident-client = { workspace = true }