[package]
name = "trident-cli"

version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }


# Trident
[dependencies.trident-client]
workspace = true

[dependencies.trident-fuzz-metrics]
workspace = true

[dependencies]

# Misc
clap = { version = "4", features = ["derive"] }
tokio = { version = "1" }
anyhow = { version = "1" }
fehler = { version = "1" }
termimad = "0.30.0"
heck = "0.4.0"
