[package]
name = "trident-client"

version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }


# Trident
[dependencies.trident-fuzz]
path = "../fuzz"
version = "0.10.0"

[dependencies.trident-config]
path = "../config"
version = "0.10.0"

[dependencies.trident-template]
path = "../template"
version = "0.10.0"


[dependencies]
# Trident IDL spec
trident-idl-spec = "0.0.2"

# Misc
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", default-features = false }
fehler = "1"
thiserror = "1"
anyhow = "1"
cargo_metadata = "0.18"
toml = { version = "0.8", features = ["preserve_order"] }
pathdiff = "0.2"
rand = "0.8"
heck = "0.4.0"

[dev-dependencies]
pretty_assertions = "1.1.0"
