[package]
name = "trident-client"

version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }


# Trident
[dependencies.trident-fuzz]
path = "../fuzz"
version = "0.10.0"

[dependencies.trident-config]
path = "../config"
version = "0.10.0"

[dependencies.trident-template]
path = "../template"
version = "0.10.0"


[dependencies]
trident-idl-spec = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
serde = { workspace = true }
fehler = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
toml = { workspace = true }
pathdiff = { workspace = true }
rand = { workspace = true }
heck = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.1.0"
