[package]
name = "trident-client"

version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }


[dependencies.trident-config]
workspace = true

[dependencies.trident-template]
workspace = true


[dependencies]
# Trident IDL spec
trident-idl-spec = "0.0.2"

# Misc
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", default-features = false }
fehler = "1"
thiserror = "1"
anyhow = "1"
cargo_metadata = "0.18"
toml = { version = "0.8", features = ["preserve_order"] }
rand = "0.8"
heck = "0.4.0"
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# HTTP Server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
notify = "6.0"


[dev-dependencies]
pretty_assertions = "1.1.0"
tempfile = "3.0"