[package]
name = "trident-config"

version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }

[dependencies]

# Solana
solana-sdk = { workspace = true }

# Honggfuzz
honggfuzz = { workspace = true }

# Afl
afl = { workspace = true }

# Misc
rand = "0.8"
serde = { version = "1", default-features = false }
base64 = "0.22.1"
serde_json = "1"
anyhow = "1"
fehler = "1"
thiserror = "1"
toml = { version = "0.8", features = ["preserve_order"] }
