[package]
name = "trident-config"

version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }

[dependencies]

# Solana
solana-sdk = { workspace = true }

# Honggfuzz
honggfuzz = { workspace = true }

# Afl
afl = { workspace = true }

# Misc
rand = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
fehler = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
