[package]
name = "trdelnik-explorer"
version = "0.4.0"
rust-version = "1.59"
edition = "2021"
license-file = "../../LICENSE"
readme = "../../README.md"
description = "Trdelnik explorer for Solana."

[dependencies]
solana-cli-config = ">=1.14, <1.17"
solana-client = ">=1.14, <1.17"
solana-sdk = ">=1.14, <1.17"
solana-program = ">=1.14, <1.17"
solana-logger = ">=1.14, <1.17"
solana-transaction-status = ">=1.14, <1.17"
solana-vote-program = ">=1.14, <1.17"
solana-account-decoder = ">=1.14, <1.17"
spl-token = "^3.5.0"
spl-memo = "3.0.1"
spl-associated-token-account = "^1.0.3"
thiserror = "1.0.30"
serde = "1.0.136"
serde_json = "1.0.79"
bs58 = "0.4.0"
base64 = "0.13.0"
pretty-hex = "0.2.1"
console = "0.15.0"
chrono = "0.4.19"
phf = { version = "0.10.1", features = ["macros"] }
bincode = "1.3.3"
num-derive = "0.3.3"
num-traits = "0.2.14"
