[package]
name = "trident-fork-testing"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }

[dependencies]
solana-client = "~2.0"
solana-pubkey = "2"
solana-sdk = { workspace = true }
thiserror = { workspace = true }

solana-loader-v3-interface = {version = "~5.0", features = ["serde"]}
solana-loader-v4-interface = {version = "~2.2", features = ["serde"]}
bincode = "~1.3"

[dependencies.trident-config]
path = "../config"
version = "0.10.0"