[package]
name = "trident-fuzz"

version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }


[features]
all = ["vote", "stake", "token"]
vote = ["dep:solana-vote-program"]
stake = ["dep:solana-stake-program"]
token = ["dep:spl-token"]
syscalls = ["syscall-v1", "syscall-v2"]
syscall-v1 = ["trident-svm/syscall-v1"]
syscall-v2 = ["trident-svm/syscall-v2"]

# Derive macros
[dependencies.trident-derive-transaction]
workspace = true

[dependencies.trident-derive-instruction]
workspace = true

[dependencies.trident-derive-accounts]
workspace = true

[dependencies.trident-derive-remaining-accounts]
workspace = true


[dependencies.trident-derive-fuzz-test-methods]
workspace = true

[dependencies.trident-derive-flow-executor]
workspace = true

# Config (Trident.toml)
[dependencies.trident-config]
workspace = true

[dependencies.trident-fuzz-metrics]
workspace = true


# Trident-SVM
[dependencies.trident-svm]
version = "0.0.4-rc.4"


[dependencies]

# Solana
solana-sdk = { workspace = true }

# Solana additonal programs
solana-vote-program = { version = "~2.0", optional = true }
solana-stake-program = { version = "~2.0", optional = true }
spl-token = { version = "5", features = ["no-entrypoint"], optional = true }


# Misc
thiserror = "1"
serde = { version = "1", default-features = false }
tokio = "1"
rand = "0.8"
itertools = "0"
borsh = "1.5.3"
indicatif = "0.17"
getrandom = "0.3"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"

