[package]
name = "trident-fuzz"

version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }


[features]
all = ["vote", "stake"]
vote = ["dep:solana-vote-program"]
stake = ["dep:solana-stake-interface"]
token = ["dep:spl-token-interface"]
token2022 = ["dep:spl-token-2022-interface","dep:spl-token-metadata-interface","dep:spl-token-group-interface"]
syscalls = ["syscall-v2"]
syscall-v2 = ["trident-svm/syscall-v2"]

# Derive macros
[dependencies.trident-derive-fuzz-test-methods]
workspace = true

[dependencies.trident-derive-flow-executor]
workspace = true

# Config (Trident.toml)
[dependencies.trident-config]
workspace = true

[dependencies.trident-fuzz-metrics]
workspace = true


# Trident-SVM
[dependencies.trident-svm]
git = "https://github.com/Ackee-Blockchain/trident-svm"
branch = "solana-2.3"

[dependencies]

# Solana
solana-sdk = { workspace = true }

# Solana additonal programs
solana-vote-program = { version = "2",optional = true}
solana-stake-interface = { version = "1",optional = true}
spl-token-interface = { version = "1",optional = true}
spl-token-2022-interface = { version = "1",optional = true}
spl-token-metadata-interface = {version = "0.7",optional = true}
spl-token-group-interface = {version = "0.6",optional = true}
spl-pod = "*"

# Misc
thiserror = "1"
serde = { version = "1", default-features = false }
tokio = "1"
rand = "0.8"
itertools = "0"
borsh = "1.5.3"
indicatif = "0.17"
getrandom = "0.3"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"

