[package]
name = "trident-syn"

version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { workspace = true }
petgraph = "0.6"
