[package]
name = "trident-syn"

version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
petgraph = { workspace = true }
