[package]
name = "trident-template"

version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }

[dependencies]

# Trident IDL spec
trident-idl-spec = "0.0.2"

# Misc
syn = { workspace = true }
quote = "1"
convert_case = "0.6"
sha2 = "0.10.0"
