[package]
name = "trident-template"

version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }

[dependencies]
trident-idl-spec = { workspace = true }

syn = { workspace = true }
quote = { workspace = true }
convert_case = { workspace = true }
sha2 = { workspace = true }
