[package]
name = "trident-template"

version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }

[dependencies]

# Trident IDL spec
trident-idl-spec = "0.0.2"

# Template engine
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"

# Misc
convert_case = "0.6"
sha2 = "0.10.0"
