[package]
name = "trident-test"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/Ackee-Blockchain/trident"
license-file = "../../LICENSE"
readme = "../../README.md"
description = "The trident_test crate helps you to write Rust tests for your programs with Trident."

[lib]
proc-macro = true

[dev-dependencies]
macrotest = "1"

[dependencies]
syn             = { workspace = true }
quote           = { workspace = true }
proc-macro2     = { workspace = true }
darling         = { workspace = true }
