[package]
name = "trident-integration-test"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Ackee-Blockchain/trident"
license-file = "../../LICENSE"
readme = "../../README.md"
description = "The Trident crate dedicated to the implementation of Integration Tests logic"


[dependencies]
# anchor
anchor-spl = { workspace = true, features = ["idl-build"] }
anchor-client = { workspace = true }
anchor-lang = { workspace = true }
#solana
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
solana-transaction-status = { workspace = true }
solana-account-decoder = { workspace = true }
solana-cli-output = { workspace = true }
#misc
proc-macro2 = { version = "1.0.66", default-features = false }
fehler = { version = "1.0.0", default-features = false }
futures = "0.3.18"
borsh = "0.10.3"
serde = { version = "1.0.136", default-features = false }
log = "0.4"
tokio = { version = "1", default-features = false }
ed25519-dalek = "1.0.1"
thiserror = "1.0.30"
serde_json = "1.0.72"
shellexpand = "3.1.0"
bincode = "1.3.3"
