[package]
name = "trident-test"
version = "0.3.3"
edition = "2021"
repository = "https://github.com/Ackee-Blockchain/trident"
license-file = "../../LICENSE"
readme = "../../README.md"
description = "The trident_test crate helps you to write Rust tests for your programs with Trident."

[lib]
proc-macro = true

[dev-dependencies]
macrotest = "1"

[dependencies]
# MISC
syn = { version = "1.0.109", default-features = false }
quote = "1.0.14"
darling = "0.13.1"
