[package]
name = "trdelnik"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trdelnik_test = { path = "../trdelnik_test" }
trdelnik_program = { path = "../trdelnik_program" }
solana-transaction-status = "=1.8.12"
anchor-client = "0.18.2"
spl-token = "3.2.0"
spl-associated-token-account = "1.0.3"
tokio = { version = "1.13.0", features = ["rt-multi-thread", "macros", "fs", "signal", "sync", "time", "io-util", "process"], default-features = false }
solana-sdk = "1.8.5"
solana-cli-output="1.8.5"
rand="0.7.3"
serde_json = "1.0.72"
futures = "0.3.18"
fehler = { version = "1.0.0", default-features = false }
thiserror = "1.0.30"
ed25519-dalek = "1.0.1"
serial_test = "0.5.1"
anyhow = { version = "1.0.45", features = ["std"], default-features = false }
cargo_metadata = "0.14.1"
syn = "1.0.85"
quote = "1.0.14"
heck = { version = "0.4.0", default-features = false }
