[package]
name = "trdelnik_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.18.2"
tokio = { version = "1.13.0", features = ["rt-multi-thread", "macros", "fs", "signal", "sync", "time", "io-util", "process"], default-features = false }
solana-sdk = "1.8.5"
serde_json = "1.0.72"
futures = "0.3.18"
fehler = { version = "1.0.0", default-features = false }
# replace `anyhow` with `thiserror`
anyhow = { version = "1.0.45", features = ["std"], default-features = false }
