[package]
name = "trdelnik_program_macros"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
heck = { version = "0.4.0", default-features = false }
