[package]
name = "trdelnik-tests"
version = "0.1.0"
description = "Created with Trdelnik"
edition = "2021"

[dev-dependencies]
fehler = "1.0.0"
rstest = "0.12.0"
anchor-spl = "^0.26.0"

[dev-dependencies.trdelnik-client]
path = "../../../crates/client"

[dev-dependencies.program_client]
path = "../.program_client"

[dev-dependencies.escrow]
path = "../programs/escrow"
