[package]
name = "trdelnik-tests"
version = "0.1.0"
description = "Created with Trdelnik"
edition = "2021"

[dependencies]
anchor-spl = "0.28.0"

[dependencies.trdelnik-client]
path = "../../../crates/client"

[dependencies.program_client]
path = "../.program_client"

[dependencies.escrow]
path = "../programs/escrow"

[dev-dependencies]
fehler = "1.0.0"
rstest = "0.12.0"
