[package]
name = "trdelnik-tests"
version = "0.1.0"
description = "Created with Trdelnik"
edition = "2021"
[dependencies.trdelnik-client]
path = "../../../crates/client"
features = ["fuzzing"]

[dependencies.program_client]
path = "../.program_client"

[dependencies.fuzz_example3]
path = "../programs/fuzz_example3"

[dev-dependencies]
fehler = "1.0.0"
rstest = "0.12.0"

[dependencies]
anchor-spl = "0.28.0"
