[[bin]]
name = "fuzz_0"
path = "fuzz_0/test_fuzz.rs"

[[bin]]
name = "fuzz_1"
path = "fuzz_1/test_fuzz.rs"

[[bin]]
name = "fuzz_2"
path = "fuzz_2/test_fuzz.rs"

[package]
name = "fuzz_tests"
version = "0.1.0"
description = "Created with Trident"
edition = "2021"

[dependencies]
arbitrary = "1.3.0"
borsh = "1.5.3"

[dependencies.trident-fuzz]
path = "../../../../crates/fuzz"
