[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.13.0", features = ["rt-multi-thread", "macros", "fs", "signal", "sync", "time", "io-util", "process"], default-features = false }
anyhow = { version = "1.0.45", features = ["std"], default-features = false }
fehler = { version = "1.0.0", default-features = false }
# async-trait = { version = "0.1.51", default-features = false }
solana-sdk = "1.8.5"
anchor-client = "0.18.2"
serde_json = "1.0.72"
futures = "0.3.18"

turnstile = { path = "../programs/turnstile", features = ["no-entrypoint"] }
trdelnik_client = { path = "../../../crates/trdelnik_client" }
