[package]
name = "trdelnik-tests"
version = "0.1.0"
description = "Created with Trdelnik"
edition = "2021"
[dependencies.trdelnik-client]
path = "../../../crates/client"

[dependencies.program_client]
path = "../.program_client"

[dependencies.turnstile]
path = "../programs/turnstile"

[dev-dependencies]
fehler = "1.0.0"
rstest = "0.12.0"
