[package]
name = "trident-derive-accounts-snapshots"
version = "0.0.1"
rust-version = "1.60"
edition = "2021"
license-file = "../../../../LICENSE"
readme = "../../../../README.md"
description = "trident-accounts-snapshots"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"
trident-fuzz = { path = "../../", version = "0.1.0" }
