[package]
name = "trident-derive-accounts-snapshots"
version = "0.0.1"
rust-version = "1.60"
edition = "2021"
license-file = "../../../../LICENSE"
readme = "../../../../README.md"
description = "trident-accounts-snapshots"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "1", features = ["full"] }
anchor-syn = { workspace = true }
