[package]
name = "trident-derive-flow-executor"

version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }


[lib]
proc-macro = true
doctest = false


[dependencies]
syn = { workspace = true }
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.trident-syn]
path = "../../../syn"
version = "0.10.0"
